--- a/lighthouse-core/lib/i18n/locales/en-XL.json
+++ b/lighthouse-core/lib/i18n/locales/en-XL.json
@@ -2084,6 +2084,30 @@
   "lighthouse-core/report/html/renderer/util.js | toplevelWarningsMessage": {
     "message": "T̂h́êŕê ẃêŕê íŝśûéŝ áf̂f́êćt̂ín̂ǵ t̂h́îś r̂ún̂ óf̂ Ĺîǵĥt́ĥóûśê:"
   },
+  "lighthouse-core/report/html/renderer/util.js | treemapAll": {
+    "message": "Âĺl̂"
+  },
+  "lighthouse-core/report/html/renderer/util.js | treemapAllScripts": {
+    "message": "Âĺl̂ Śĉŕîṕt̂ś"
+  },
+  "lighthouse-core/report/html/renderer/util.js | treemapCoverage": {
+    "message": "Ĉóv̂ér̂áĝé"
+  },
+  "lighthouse-core/report/html/renderer/util.js | treemapDuplicateModules": {
+    "message": "D̂úp̂ĺîćât́ê Ḿôd́ûĺêś"
+  },
+  "lighthouse-core/report/html/renderer/util.js | treemapName": {
+    "message": "N̂ám̂é"
+  },
+  "lighthouse-core/report/html/renderer/util.js | treemapResourceBytes": {
+    "message": "R̂éŝóûŕĉé B̂ýt̂éŝ"
+  },
+  "lighthouse-core/report/html/renderer/util.js | treemapToggleTable": {
+    "message": "T̂óĝǵl̂é T̂áb̂ĺê"
+  },
+  "lighthouse-core/report/html/renderer/util.js | treemapUnusedBytes": {
+    "message": "Ûńûśêd́ B̂ýt̂éŝ"
+  },
   "lighthouse-core/report/html/renderer/util.js | varianceDisclaimer": {
     "message": "V̂ál̂úêś âŕê éŝt́îḿât́êd́ âńd̂ ḿâý v̂ár̂ý. T̂h́ê [ṕêŕf̂ór̂ḿâńĉé ŝćôŕê íŝ ćâĺĉúl̂át̂éd̂](https://web.dev/performance-scoring/) d́îŕêćt̂ĺŷ f́r̂óm̂ t́ĥéŝé m̂ét̂ŕîćŝ."
   },
