--- a/lighthouse-core/lib/i18n/locales/en-XL.json
+++ b/lighthouse-core/lib/i18n/locales/en-XL.json
@@ -2096,6 +2096,30 @@
   "lighthouse-core/report/html/renderer/util.js | warningHeader": {
     "message": "Ŵár̂ńîńĝś: "
   },
+  "lighthouse-treemap/app/src/util.js | all": {
+    "message": "Âĺl̂"
+  },
+  "lighthouse-treemap/app/src/util.js | allScripts": {
+    "message": "Âĺl̂ Śĉŕîṕt̂ś"
+  },
+  "lighthouse-treemap/app/src/util.js | coverage": {
+    "message": "Ĉóv̂ér̂áĝé"
+  },
+  "lighthouse-treemap/app/src/util.js | duplicateModules": {
+    "message": "D̂úp̂ĺîćât́ê Ḿôd́ûĺêś"
+  },
+  "lighthouse-treemap/app/src/util.js | name": {
+    "message": "N̂ám̂é"
+  },
+  "lighthouse-treemap/app/src/util.js | resourceBytes": {
+    "message": "R̂éŝóûŕĉé B̂ýt̂éŝ"
+  },
+  "lighthouse-treemap/app/src/util.js | toggleTable": {
+    "message": "T̂óĝǵl̂é T̂áb̂ĺê"
+  },
+  "lighthouse-treemap/app/src/util.js | unusedBytes": {
+    "message": "Ûńûśêd́ B̂ýt̂éŝ"
+  },
   "node_modules/lighthouse-stack-packs/packs/amp.js | efficient-animated-content": {
     "message": "F̂ór̂ án̂ím̂át̂éd̂ ćôńt̂én̂t́, ûśê [`amp-anim`](https://amp.dev/documentation/components/amp-anim/) t́ô ḿîńîḿîźê ĆP̂Ú ûśâǵê ẃĥén̂ t́ĥé ĉón̂t́êńt̂ íŝ óf̂f́ŝćr̂éêń."
   },
