--- a/lighthouse-core/lib/i18n/locales/en-US.json
+++ b/lighthouse-core/lib/i18n/locales/en-US.json
@@ -2096,28 +2096,28 @@
   "lighthouse-core/report/html/renderer/util.js | warningHeader": {
     "message": "Warnings: "
   },
-  "lighthouse-treemap/app/src/util.js | all": {
+  "lighthouse-treemap/app/src/util.js | allLabel": {
     "message": "All"
   },
-  "lighthouse-treemap/app/src/util.js | allScripts": {
+  "lighthouse-treemap/app/src/util.js | allScriptsDropdownLabel": {
     "message": "All Scripts"
   },
-  "lighthouse-treemap/app/src/util.js | coverage": {
+  "lighthouse-treemap/app/src/util.js | coverageColumnName": {
     "message": "Coverage"
   },
-  "lighthouse-treemap/app/src/util.js | duplicateModules": {
+  "lighthouse-treemap/app/src/util.js | duplicateModulesLabel": {
     "message": "Duplicate Modules"
   },
-  "lighthouse-treemap/app/src/util.js | name": {
-    "message": "Name"
-  },
-  "lighthouse-treemap/app/src/util.js | resourceBytes": {
+  "lighthouse-treemap/app/src/util.js | resourceBytesLabel": {
     "message": "Resource Bytes"
   },
-  "lighthouse-treemap/app/src/util.js | toggleTable": {
+  "lighthouse-treemap/app/src/util.js | tableColumnName": {
+    "message": "Name"
+  },
+  "lighthouse-treemap/app/src/util.js | toggleTableButtonLabel": {
     "message": "Toggle Table"
   },
-  "lighthouse-treemap/app/src/util.js | unusedBytes": {
+  "lighthouse-treemap/app/src/util.js | unusedBytesLabel": {
     "message": "Unused Bytes"
   },
   "node_modules/lighthouse-stack-packs/packs/amp.js | efficient-animated-content": {
